--- a/pom.xml
+++ b/pom.xml
@@ -6,14 +6,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.5.3</version>
+		<version>2.4.10</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.bruno</groupId>
 	<artifactId>eventoapp</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>eventoapp</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Projeto de Cadastro de Eventos</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
@@ -63,13 +63,6 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<optional>true</optional>
 		</dependency>
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-validator</artifactId>
-			<version>6.0.10.Final</version>
-		</dependency>
-
-
 	</dependencies>
 
 	<build>
